@@ -19,9 +19,11 @@ use File::pushd            1.00 ();
 use File::Remove           1.42 ();
 use File::Find::Rule       0.30 ();
 use File::Find::Rule::VCS  1.05 ();
+use File::Find::Rule::Perl 1.05 ();
 use IPC::Run3             0.034 ();
 use Params::Util           0.35 qw{ _STRING _CODE };
 use CPAN::Version           5.5 ();
+use PPI                   1.203 ();
 use Module::Changes::ADAMK 0.04 ();
 use ADAMK::SVN                  ();
 use ADAMK::Release              ();
