@@ -2,6 +2,7 @@ Changes for Perl extension ADAMK-Repository
 
 0.07 not released yet
 	- Added ADAMK::Shell
+	- Added update_current_perl_versions command
 	- Updated to use Module::Changes::ADAMK 0.05
 
 0.06 Mon 26 Jan 2009
